--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/start",
+    "start": "nodemon ./bin/start",
     "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "debug": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.5",
     "morgan": "^1.8.2",
     "serve-favicon": "^2.4.3"
@@ -30,6 +31,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.2.1"
+    "eslint-plugin-react": "^7.2.1",
+    "nodemon": "^1.14.12"
   }
 }
