--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon ./bin/start",
-    "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha --recursive './test/*.test.js' --compilers js:babel-core/register"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.2.1",
+    "mocha": "^5.0.1",
     "nodemon": "^1.14.12"
   }
 }
